<<$Id: HISTORY,v 1.22 2006/01/21 13:36:57 mitch Exp $>>


gbsplay HISTORY


2006/xx/xx  -  0.0.8cvs
~~~~~~~~~~~~~~~~~~~~~~~




2006/01/21  -  0.0.8
~~~~~~~~~~~~~~~~~~~~

Enhancements:

- code optimizations
  - use long instead of int where possible, better on 64bit archs
  - use const where possible

- gbsplay:
  - use blipbuffer-like sound generation (better quality)
  - optimizations to channel 2 (interpolation, dc offset)
  - NAS output honors requested endianess
  - translation fixes

- build process:
  - add regression test
  - better autotools compatibility (needs fewer tweaks in ebuild)
  - fix tar call in dist target for tar versions > 1.14
  - optimize symbol hash tables
  - use -fpic instead of -fPIC
  - better error message when CC is undefined


2004/07/16  -  0.0.7
~~~~~~~~~~~~~~~~~~~~

Enhancements:

- gbsplay:
  - don't use random() for noise, emulate the original Gameboy
    behaviour
  - support more verbosity levels than just "quiet"


2004/04/26  -  0.0.6
~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- fix make errors on CygWin
- fix "make dist" on FreeBSD
- fix path errors in configure script

Enhancements:

- code optimizations (using regparm where available)

- include example song "Nightmode" by Laxity

- gbsplay:
  - include a NAS driver
  - repeat mode for infinite playmode
  - set screen refresh rate (refresh_delay)
  - include a sound output plugin architecture

- gbsinfo:
  - add --help option

- build process:
  - print error on non-existing configure options
  - print additional diagnostic messages during configure
  - enable building of a shared library
  - some Solaris and FreeBSD bugfixes


2004/01/16  -  0.0.5
~~~~~~~~~~~~~~~~~~~~
- build process:
  - fix broken Cygwin build
  - more standards compliant configure script


2003/12/28  -  0.0.4
~~~~~~~~~~~~~~~~~~~~
- gbsplay:
  - changed -z and -Z description
  - output endianess can be selected
  - shuffled playlists are reproducible over playlist boundaries