@@ -1,8 +1,9 @@
-/* $Id: gbhw.c,v 1.50 2006/11/18 14:43:36 ranmachan Exp $
+/* $Id: gbhw.c,v 1.51 2008/06/20 20:13:22 mitch Exp $
  *
  * gbsplay is a Gameboy sound player
  *
- * 2003-2006 (C) by Tobias Diedrich <ranma+gbsplay@tdiedrich.de>
+ * 2003-2006,2008 (C) by Tobias Diedrich <ranma+gbsplay@tdiedrich.de>
+ *                       Christian Garbs <mitch@cgarbs.de>
  * Licensed under GNU GPL.
  */
 
@@ -585,12 +586,15 @@ regparm void gbhw_getminmax(int16_t *lmin, int16_t *lmax, int16_t *rmin, int16_t
 regparm void gbhw_init(uint8_t *rombuf, uint32_t size)
 {
 	long i;
+	int mute_tmp[4];
 
-	if (impbuf) gbhw_impbuf_reset(impbuf);
+	for (i=0; i<4; i++)
+		mute_tmp[i] = gbhw_ch[i].mute;
+	if (impbuf)
+		gbhw_impbuf_reset(impbuf);
 	rom = rombuf;
 	lastbank = ((size + 0x3fff) / 0x4000) - 1;
 	rombank = 1;
-	memset(gbhw_ch, 0, sizeof(gbhw_ch));
 	master_volume = MASTER_VOL_MAX;
 	master_fade = 0;
 	if (soundbuf)
@@ -601,7 +605,7 @@ regparm void gbhw_init(uint8_t *rombuf, uint32_t size)
 		gbhw_ch[i].duty_ctr = 4;
 		gbhw_ch[i].div_tc = 1;
 		gbhw_ch[i].master = 1;
-		gbhw_ch[i].mute = 0;
+		gbhw_ch[i].mute = mute_tmp[i];
 	}
 	memset(extram, 0, sizeof(extram));
 	memset(intram, 0, sizeof(intram));
